Better Auto Names & Organize Commands