@@ -468,7 +468,7 @@ class Yylex {
         case 1:
           {
             throw new ParseException(
-                yychar, ParseException.ERROR_UNEXPECTED_CHAR, new Character(yycharat(0)));
+                yychar, ParseException.ERROR_UNEXPECTED_CHAR, Character.valueOf(yycharat(0)));
           }
         case 34:
           break;
